Fix content overflowing in display

--- a/style.css
+++ b/style.css
@@ -27,13 +27,13 @@ body {
   margin-bottom: 10px;
   display: flex;
   justify-content: right;
-  overflow: hidden;
 }
 
 .displayValue {
   font-size: 60px;
   margin: 0;
   padding: 0;
+  overflow-x: scroll;
   color: white;
 }
 
